--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,137 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
+  width: 80vw;
+  margin: 0 auto;
+  border-left: 1px solid lightgrey;
+  border-right: 1px solid lightgrey;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#NavBar {
+  width: 100%;
+  position: sticky;
+  top: 0;
+  padding: 1rem;
+  background-color: rgba(120, 120, 120, 0.8);
+}
+
+#NavBar ul {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+#Intro {
+  width: 80%;
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 1rem;
+  padding: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#about-me {
+  margin: 2rem 0;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  gap: 1rem;
+  padding: 2rem;
+  border: 1px solid black;
 }
+
+ul.panel {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+#Skills {
+  width: 100%;
+  display: grid;
+  grid-template-rows: auto auto;
+  gap: 2rem;
+  padding: 2rem;
+  place-items: center;
+}
+
+#Skills ul {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+  gap: 1rem;
+}
+
+#Skills li {
+  display: grid;
+  grid-template-rows: auto auto;
+  gap: 0.2rem;
+  justify-items: center;
+}
+
+#Skills li p {
+  text-align: center;
+}
+
+#Works {
+  width: 100%;
+  display: grid;
+  grid-template-rows: auto auto;
+  gap: 2rem;
+  padding: 2rem;
+  place-items: center;
+}
+
+.display-board {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  column-gap: 1rem;
+  row-gap: 1.5rem;
+}
+
+.project {
+  height: 100%;
+  display: grid;
+  grid-template-rows: auto auto;
+  background-color: lightgrey;
+  border: 1px solid black;
+}
+
+.project img {
+  place-self: center;
+}
+
+.project > div {
+  background-color: white;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  gap: 1rem;
+  padding: 1rem 1rem 1.5rem;
+}
+
+.project .header {
+  display: grid;
+  grid-template-columns: 1fr auto;
+}
+
+#Contact {
+  width: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  gap: 2rem;
+  padding: 2rem;
+  background-color: lightgrey;
+}
+
