--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,9 @@
   --navbar-font-color: white;
   --card-bg-color: white;
   --shadow-color: lightgrey;
-  --accent-color1: rgb(20, 108, 148);
-  --accent-color2: rgb(175, 211, 226);
+  --accent-color: rgb(255, 198, 13);
+  --accent-color2: rgb(20, 108, 148);
+  --dummy-color: lightgrey;
 }
 
 * {
@@ -30,12 +31,16 @@ ul {
 }
 
 a {
-  color: var(--navbar-font-color);
   text-decoration: none;
+  color: var(--main-font-color);
 }
 
 a:visited {
-  color: var(--navbar-font-color);
+  color: var(--main-font-color);
+}
+
+a:hover {
+  color: var(--accent-color);
 }
 
 h1 {
@@ -45,6 +50,10 @@ h1 {
 h3 {
   font-weight: 400;
   font-size: 1.2rem;
+}
+
+.dummy {
+  color: var(--dummy-color);
 }
 
 .main {
@@ -91,6 +100,14 @@ h3 {
   }
 }
 
+#NavBar a {
+  color: var(--navbar-font-color);
+}
+
+#NavBar a:visited {
+  color: var(--navbar-font-color);
+}
+
 #NavBar a:target {
   background-color: red;
 }
@@ -99,14 +116,20 @@ h3 {
   width: 80%;
   display: grid;
   grid-template-columns: auto auto;
-  gap: 1rem;
+  gap: 2rem;
   padding: 5rem 2rem 0;
   place-items: center;
+}
+
+#Intro img {
+  max-width: 300px;
 }
 
 @media (max-width: 999px) {
   #Intro {
     width: 90%;
+    gap: 1rem;
+    padding: 5rem 1rem 0;
   }
   #Intro img {
     margin: 2rem 0;
@@ -117,7 +140,6 @@ h3 {
 @media (max-width: 599px) {
   #Intro {
     grid-template-columns: 1fr;
-    padding: 5rem 1rem 0;
   }
   #Intro img {
     width: auto;
@@ -151,7 +173,7 @@ ul.panel {
   gap: 1rem;
 }
 
-ul.panel li {
+ul.panel li, ul.panel li > a {
   display: grid;
   place-items: center;
 }
@@ -167,6 +189,7 @@ svg {
   gap: 2rem;
   padding: 4rem 2rem 0;
   place-items: center;
+  font-family: 'Ubuntu';
 }
 
 @media (max-width: 599px) {
@@ -179,15 +202,24 @@ svg {
 #Skills ul {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
-  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(4rem, 1fr));
+  gap: 2rem;
 }
 
 #Skills li {
   display: grid;
-  grid-template-rows: auto auto;
-  gap: 0.2rem;
-  justify-items: center;
+  grid-template-rows: 1fr auto;
+  gap: 0.25rem;
+  place-items: center;
+}
+
+#Skills svg {
+  width: 3rem !important; 
+  height: 3rem !important;
+}
+
+#Skills svg.dummy {
+  padding: 0.75rem;
 }
 
 #Skills li p {
@@ -242,7 +274,16 @@ svg {
 
 .project img {
   width: 100%;
+  height: 300px;
+  object-fit: cover;
+  object-position: top;
   place-self: center;
+}
+
+@media (max-width: 599px) {
+  .project img {
+    height: 250px;
+  }
 }
 
 .project > div {
@@ -283,6 +324,22 @@ svg {
   padding: 2rem;
 }
 
+#Contact a {
+  color: var(--secondary-font-color);
+}
+
+#Contact a:visited {
+  color: var(--secondary-font-color);
+}
+
+#Contact a:hover {
+  color: var(--accent-color2);
+}
+
+#Contact ul.panel {
+  justify-content: center;
+}
+
 @media (max-width: 599px) {
   #Contact > div {
     gap: 1.5rem;
@@ -290,6 +347,39 @@ svg {
   }
 }
 
-#Contact ul.panel {
-  padding-top: 0;
+#Footer {
+  background-color: var(--secondary-bg-color);
+  color: var(--secondary-font-color);
+  font-size: 0.8rem;
+  font-style: italic;
+  padding: 0.5rem;
+  display: grid;
+  place-items: center;
+}
+
+#Footer a {
+  color: var(--secondary-font-color);
+}
+
+#Footer a:visited {
+  color: var(--secondary-font-color);
+}
+
+#Footer a.desktop,
+#Footer a.mobile {
+  display: block;
+}
+
+#Footer a.tablet {
+  display: none;
+}
+
+@media (min-width: 600px) and (max-width: 999px) {
+  #Footer a.desktop,
+  #Footer a.mobile {
+    display: none;
+  }
+  #Footer a.tablet {
+    display: block;
+  }
 }
