Implement scroll effect on navbar

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   --card-bg-color: white;
   --shadow-color: lightgrey;
   --accent-color: rgb(255, 198, 13);
-  --accent-color2: rgb(20, 108, 148);
+  --accent-color2: black;
   --dummy-color: lightgrey;
 }
 
@@ -16,6 +16,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -45,6 +46,7 @@ a:hover {
 
 h1 {
   font-family: 'Raleway', sans-serif;
+  font-size: 2rem;
 }
 
 h3 {
@@ -76,6 +78,7 @@ h3 {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   gap: 2rem;
 }
 
@@ -102,14 +105,20 @@ h3 {
 
 #NavBar a {
   color: var(--navbar-font-color);
+  text-decoration: underline rgba(255, 255, 255, 0);
+  transition: all 0.3s ease 0.1s;
 }
 
 #NavBar a:visited {
   color: var(--navbar-font-color);
 }
 
-#NavBar a:target {
-  background-color: red;
+#NavBar a:hover {
+  color: var(--accent-color2);
+}
+
+#NavBar li.active > a {
+  text-decoration-color: var(--navbar-font-color);
 }
 
 #Intro {
@@ -344,7 +353,7 @@ svg {
 }
 
 #Contact a:hover {
-  color: var(--accent-color2);
+  color: var(--accent-color);
 }
 
 #Contact ul.panel {
